--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-session": "^1.16.1",
-    "mongoose": "^5.5.9"
+    "mongoose": "^5.5.9",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "keywords": []
 }
